--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
      <head>	
-           <meta http-equiv="Refresh" content="0; url="https://mp2i-fsm.github.io/mp2i-2021/" />
+           <meta http-equiv="Refresh" content="0; url=https://mp2i-fsm.github.io/mp2i-2021/" />
      </head>
      <body>
-           <p>Redirection to <a href="https://mp2i-fsm.github.io/mp2i-2021/"></a>.</p>
+           <p>Redirection to <a href="https://mp2i-fsm.github.io/mp2i-2021/">https://mp2i-fsm.github.io/mp2i-2021</a>.</p>
      </body>
 </html>
